UF-8767: Fixes various sonar issues